# name-entity-recognition-flair

./: README.md  pyproject.toml
config/: debug.yml
config/ner/: parameters.json
config/postprocess/: parameters.json
data/ner/: sample
debug/01FWRFG1VFJXC9E5DZVYQTM9XY/ocr/: output.json
input/: 211206_PP_UK_T1_01.png.json
output/: 211206_PP_UK_T1_01.png.json
processes/ner/: process.py
